# riscv-simulator

./: CMakeLists.txt  CMakePresets.json  README.md
cpu/: cpu.cpp  cpu.h
test/: test-cpu.cpp
translator/: translator.cpp
